--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_renuncias.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_renuncias.jrxml
@@ -18,8 +18,8 @@
 	<queryString>
 		<![CDATA[select concat(e.nombreempleado,' ', e.apellidoempleado) as nombres ,p.nombrepuesto,c.salarioactual,DATE_FORMAT(c.fechainiciocontrato, '%d/%m/%Y')as "Fecha Inicio Contrato",c.partidacontrato,p.nivelpuesto,DATE_FORMAT(p.fechabaja, '%d/%m/%Y')as "Baja Contrato" 
 from empleado e inner join puesto p on e.codigopuesto=p.codigopuesto inner join contrato c on e.codigoempleado=c.codigoempleado
-where   c.fechainiciocontrato>=$P{FECHAINICIO}
-and p.fechabaja<=$P{FECHAFIN}]]>
+where   c.fechainiciocontrato>=$P{FECHAINICIO}]]>
+<!--and p.fechabaja<=$P{FECHAFIN}]] comentaod por error de mysql-->
 	</queryString>
 	<field name="nombres" class="java.lang.String"/>
 	<field name="nombrepuesto" class="java.lang.String">
