--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
@@ -17,8 +17,9 @@
 	</parameter>
 	<queryString>
 		<![CDATA[select  concat(e.nombreempleado,' ',e.apellidoempleado) as Empleado,p.nombrepuesto,m.nombremision,m.objetivomision,m.departamentomision,m.paisdestino,m.ciudad from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join empleadopuesto ep on e.codigoempleado=ep.codigoempleado inner join puesto p on p.codigopuesto=ep.codigopuesto
-where m.fechasalidamision>=$P{FECHAINICIO}
-AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
+where m.fechasalidamision>=$P{FECHAINICIO} and tipomision like '%Externa']]>
+	<!--
+AND m.fecharegresomision<=$P{FECHAFIN} -->
 	</queryString>
 	<field name="Empleado" class="java.lang.String"/>
 	<field name="nombrepuesto" class="java.lang.String">
