--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
@@ -20,8 +20,9 @@
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT  DATE_FORMAT(m.fechasalidamision, '%d/%m/%Y') as Desde, DATE_FORMAT(m.fecharegresomision, '%d/%m/%Y') as Hasta, TRUNCATE(m.gastoviaje,4) AS gastoviaje,m.numeroacuerdo,m.boleto,m.viaticos ,m.organismopatrocinador,m.organismoinvita from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join empleadopuesto ep on e.codigoempleado=ep.codigoempleado inner join puesto p on p.codigopuesto=ep.codigopuesto
-where m.fechasalidamision>=$P{FECHAINICIO}
-AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
+where m.fechasalidamision>=$P{FECHAINICIO} and tipomision like '%Externa']]>
+	<!--
+AND m.fecharegresomision<=$P{FECHAFIN}-->
 	</queryString>
 	<field name="Desde" class="java.lang.String"/>
 	<field name="Hasta" class="java.lang.String"/>
@@ -55,116 +56,116 @@ AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
 	<pageHeader>
 		<band height="94" splitType="Stretch">
 			<staticText>
-				<reportElement x="316" y="64" width="143" height="14" uuid="2be17fb4-1f25-4155-94ed-35e45ce86c1e"/>
+				<reportElement uuid="2be17fb4-1f25-4155-94ed-35e45ce86c1e" x="316" y="64" width="143" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Misiones Externas 2]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="310" y="80" width="30" height="14" uuid="5ae09e3c-4d04-4aa4-8d66-5b2dd48c27b7"/>
+				<reportElement uuid="5ae09e3c-4d04-4aa4-8d66-5b2dd48c27b7" x="310" y="80" width="30" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="395" y="80" width="32" height="14" uuid="243a036b-da4b-445b-a446-0ed357029cac"/>
+				<reportElement uuid="243a036b-da4b-445b-a446-0ed357029cac" x="395" y="80" width="32" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="94" y="79" width="100" height="14" uuid="f95dbd3b-8178-4474-a582-79b75e0bdbc9"/>
+				<reportElement uuid="f95dbd3b-8178-4474-a582-79b75e0bdbc9" x="94" y="79" width="100" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="623" y="77" width="72" height="14" uuid="5bcfcb96-94aa-486c-a68f-3c85888f642f"/>
+				<reportElement uuid="5bcfcb96-94aa-486c-a68f-3c85888f642f" x="623" y="77" width="72" height="14"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="693" y="77" width="40" height="14" uuid="cef23c1b-b229-4c5c-b729-37cf628c980c"/>
+				<reportElement uuid="cef23c1b-b229-4c5c-b729-37cf628c980c" x="693" y="77" width="40" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="339" y="80" width="44" height="14" uuid="c7240493-273a-49fd-a8d7-4ef5ad1edfaa"/>
+				<reportElement uuid="c7240493-273a-49fd-a8d7-4ef5ad1edfaa" x="339" y="80" width="44" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="422" y="80" width="48" height="14" uuid="b82db202-2306-4820-8467-03e8f4ebc231"/>
+				<reportElement uuid="b82db202-2306-4820-8467-03e8f4ebc231" x="422" y="80" width="48" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="644" y="63" width="30" height="14" uuid="aac144ea-6a87-4f08-b776-5971e673658e"/>
+				<reportElement uuid="aac144ea-6a87-4f08-b776-5971e673658e" x="644" y="63" width="30" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="671" y="63" width="94" height="14" uuid="df03cc1f-c69d-41f9-8777-24c62ec48eeb"/>
+				<reportElement uuid="df03cc1f-c69d-41f9-8777-24c62ec48eeb" x="671" y="63" width="94" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="64" y="79" width="30" height="14" uuid="6a069d59-e199-4f16-ac10-6c2677207567"/>
+				<reportElement uuid="6a069d59-e199-4f16-ac10-6c2677207567" x="64" y="79" width="30" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="64" y="64" width="100" height="14" uuid="4f98cca5-99a1-4b73-981d-dd3890d1a137"/>
+				<reportElement uuid="4f98cca5-99a1-4b73-981d-dd3890d1a137" x="64" y="64" width="100" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[rpt_reporte_mex2]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="354" y="38" width="55" height="17" uuid="76793fd4-1565-4ef8-8aac-a66107c775dc"/>
+				<reportElement uuid="76793fd4-1565-4ef8-8aac-a66107c775dc" x="354" y="38" width="55" height="17"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[SISASMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="301" y="5" width="182" height="20" uuid="7293e6f4-a06b-4d7d-be60-8b305679742b"/>
+				<reportElement uuid="7293e6f4-a06b-4d7d-be60-8b305679742b" x="301" y="5" width="182" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="319" y="19" width="140" height="20" uuid="387a90a2-a84c-4be3-abaa-22bc4b08ca80"/>
+				<reportElement uuid="387a90a2-a84c-4be3-abaa-22bc4b08ca80" x="319" y="19" width="140" height="20"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recursos Humanos]]></text>
 			</staticText>
 			<image>
-				<reportElement x="69" y="3" width="160" height="60" uuid="62ab98e5-16d8-45bf-bae8-6eb98ff1fb48"/>
+				<reportElement uuid="62ab98e5-16d8-45bf-bae8-6eb98ff1fb48" x="69" y="3" width="160" height="60"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="646" y="3" width="144" height="60" uuid="72ee3888-0064-48f9-8803-deda823af38b"/>
+				<reportElement uuid="72ee3888-0064-48f9-8803-deda823af38b" x="646" y="3" width="144" height="60"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 		</band>
@@ -172,123 +173,124 @@ AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
 	<columnHeader>
 		<band height="19" splitType="Stretch">
 			<rectangle>
-				<reportElement x="57" y="2" width="663" height="15" uuid="e0d1f52c-0caf-4650-aa00-8b3c0f4bca9f"/>
+				<reportElement uuid="e0d1f52c-0caf-4650-aa00-8b3c0f4bca9f" x="57" y="2" width="663" height="15"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="57" y="0" width="67" height="14" uuid="daf65d49-8d84-4aca-8fe1-97e5a9fb7140"/>
+				<reportElement uuid="daf65d49-8d84-4aca-8fe1-97e5a9fb7140" x="57" y="0" width="67" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha LLegada]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="139" y="3" width="65" height="14" uuid="f214cfb5-ccad-4158-8387-3d2e94b2de4f"/>
+				<reportElement uuid="f214cfb5-ccad-4158-8387-3d2e94b2de4f" x="139" y="3" width="65" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha Regreso]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="212" y="2" width="86" height="14" uuid="56e0ea94-aa33-4b1b-a28a-fb1bee4c9284"/>
+				<reportElement uuid="56e0ea94-aa33-4b1b-a28a-fb1bee4c9284" x="212" y="2" width="86" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Gasto($)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="307" y="2" width="60" height="14" uuid="544233b5-c405-4b1a-9bbe-0a7b06bda63f"/>
+				<reportElement uuid="544233b5-c405-4b1a-9bbe-0a7b06bda63f" x="307" y="2" width="60" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Acuerdo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="393" y="2" width="55" height="14" uuid="cc0f0862-0b00-401c-8751-053a34bfc7c5"/>
+				<reportElement uuid="cc0f0862-0b00-401c-8751-053a34bfc7c5" x="393" y="2" width="55" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Boleto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="452" y="2" width="100" height="14" uuid="cadd1413-9292-4f0e-b937-cc285eb09ef0"/>
+				<reportElement uuid="cadd1413-9292-4f0e-b937-cc285eb09ef0" x="452" y="2" width="100" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Patrocinador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="606" y="2" width="100" height="14" uuid="b28a9dfb-0916-4c30-8e13-329aba9f701a"/>
+				<reportElement uuid="b28a9dfb-0916-4c30-8e13-329aba9f701a" x="606" y="2" width="100" height="14"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Organismo que Invita]]></text>
 			</staticText>
 			<line>
-				<reportElement x="134" y="2" width="1" height="14" uuid="c8f6945f-cecf-4e46-9c7a-9487985c2f6b"/>
+				<reportElement uuid="c8f6945f-cecf-4e46-9c7a-9487985c2f6b" x="134" y="2" width="1" height="14"/>
 			</line>
 			<line>
-				<reportElement x="209" y="3" width="1" height="14" uuid="e710308f-165e-419b-a49b-c982603438eb"/>
+				<reportElement uuid="e710308f-165e-419b-a49b-c982603438eb" x="209" y="3" width="1" height="14"/>
 			</line>
 			<line>
-				<reportElement x="298" y="2" width="1" height="14" uuid="c9e1519e-1911-4114-ac4c-56c45609ca19"/>
+				<reportElement uuid="c9e1519e-1911-4114-ac4c-56c45609ca19" x="298" y="2" width="1" height="14"/>
 			</line>
 			<line>
-				<reportElement x="374" y="2" width="1" height="14" uuid="e9c5b065-7ad8-4859-bfc6-0d71bc5d77ed"/>
+				<reportElement uuid="e9c5b065-7ad8-4859-bfc6-0d71bc5d77ed" x="374" y="2" width="1" height="14"/>
 			</line>
 			<line>
-				<reportElement x="451" y="2" width="1" height="14" uuid="874e3df6-0736-4283-9d3c-9a2374f810ff"/>
+				<reportElement uuid="874e3df6-0736-4283-9d3c-9a2374f810ff" x="451" y="2" width="1" height="14"/>
 			</line>
 			<line>
-				<reportElement x="604" y="3" width="1" height="14" uuid="8c247b14-213b-4152-9c35-5d89a3e6e49d"/>
+				<reportElement uuid="8c247b14-213b-4152-9c35-5d89a3e6e49d" x="604" y="3" width="1" height="14"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="16" splitType="Stretch">
 			<textField>
-				<reportElement x="307" y="0" width="39" height="14" uuid="df87ecc2-2131-46fa-87a6-4ddd11dd4653"/>
+				<reportElement uuid="df87ecc2-2131-46fa-87a6-4ddd11dd4653" x="307" y="0" width="39" height="14"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numeroacuerdo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="375" y="0" width="73" height="14" uuid="7f821bb7-e11a-4f25-a7ee-0f6f523812fb"/>
+				<reportElement uuid="7f821bb7-e11a-4f25-a7ee-0f6f523812fb" x="375" y="0" width="73" height="14"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{boleto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="457" y="0" width="143" height="14" uuid="d2b49720-ba6a-4ad4-859e-29923b13ffa0"/>
+				<reportElement uuid="d2b49720-ba6a-4ad4-859e-29923b13ffa0" x="457" y="0" width="143" height="14"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{organismopatrocinador}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="605" y="0" width="128" height="14" uuid="331ffb0f-7fdd-45f9-820a-f3e4a7f354a2"/>
+				<reportElement uuid="331ffb0f-7fdd-45f9-820a-f3e4a7f354a2" x="605" y="0" width="128" height="14"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{organismoinvita}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="61" y="0" width="60" height="14" uuid="2b866d77-3fb7-4570-91d5-950ebc6ba5d4"/>
+				<reportElement uuid="2b866d77-3fb7-4570-91d5-950ebc6ba5d4" x="61" y="0" width="60" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="139" y="0" width="61" height="14" uuid="f7367943-23df-4a2e-a746-e7d7176c9c8a"/>
+				<reportElement uuid="f7367943-23df-4a2e-a746-e7d7176c9c8a" x="139" y="0" width="61" height="14"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Hasta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="236" y="0" width="54" height="14" uuid="2236456c-c864-4921-8286-d9f535d54d1a"/>
+				<reportElement uuid="2236456c-c864-4921-8286-d9f535d54d1a" x="236" y="0" width="54" height="14"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[$F{gastoviaje}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -302,20 +304,20 @@ AND m.fecharegresomision<=$P{FECHAFIN} and tipomision like '%Externa']]>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<line>
-				<reportElement x="620" y="7" width="90" height="1" uuid="4eac21f9-6c50-40d6-aa5e-dbd9194fdbe2"/>
+				<reportElement uuid="4eac21f9-6c50-40d6-aa5e-dbd9194fdbe2" x="620" y="7" width="90" height="1"/>
 			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="623" y="11" width="106" height="13" backcolor="#FFFFFF" uuid="b9f332fb-847c-412c-b60f-13b0eb194b9a"/>
+				<reportElement uuid="b9f332fb-847c-412c-b60f-13b0eb194b9a" mode="Opaque" x="623" y="11" width="106" height="13" backcolor="#FFFFFF"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="203" y="6" width="102" height="1" uuid="7f6b219c-d6c8-4d1a-baa5-521dd4b482db"/>
+				<reportElement uuid="7f6b219c-d6c8-4d1a-baa5-521dd4b482db" x="203" y="6" width="102" height="1"/>
 			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="200" y="11" width="101" height="13" backcolor="#FFFFFF" uuid="9533bff5-40c5-4cd3-832d-ded03ec55d73"/>
+				<reportElement uuid="9533bff5-40c5-4cd3-832d-ded03ec55d73" mode="Opaque" x="200" y="11" width="101" height="13" backcolor="#FFFFFF"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
